# a

./: .gitignore  CMakeLists.txt  IDE_USAGE.md  README  README.md  main.c
fonts/: test.txt
include/: a.h  arr.h  block.h  common.h  model.h  render.h  section.h
src/: a.h  arr.c  block.c  main  main.c  model.c  render.c
